# MangaPDF

./: .gitignore  TODO.md
epub_to_pdf/: Cargo.toml
epub_to_pdf/src/: main.rs
image_puller/: Cargo.toml  README.md
image_split/: Cargo.toml
image_split/src/: main.rs
lib_pdf/: Cargo.toml
lib_pdf/src/: builder.rs  lib.rs  pdf_page.rs  utils.rs
lib_pdf/src/builder/: pages.rs  stats.rs
lib_pdf/src/pdf_page/: pdf_image.rs  text_page.rs
lib_stream_pdf/: Cargo.toml
lib_stream_pdf/src/: common_types.rs  font.rs  lib.rs  objects.rs  page.rs  pdf_image.rs  utils.rs
lib_stream_pdf/src/page/: text.rs
manga_pdf/: Cargo.toml
manga_pdf/src/: main.rs  utils.rs  volumes.rs
manga_pdf/src/utils/: natural.rs
manga_pdf/src/volumes/: info.rs  stats.rs  volume.rs
