[package]
name = "image_puller"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.2"
lopdf = "0.23.0"
rayon = "1.2.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
